# cs149-23fall-asst4

./: .gitignore  Makefile  gpt149.py  matrix.cu  matrix.h  module.cpp  module.ispc  module_ispc.h  test.cu  tmp1
test/: CMakeLists.txt  model.py  test.cpp
